welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:33: error: '(' expected but identifier found.
  if x==y{
     ^close10:35: error: illegal start of simple expression
  }
  ^close10:38: error: Unmatched closing brace '}' ignored here
 }
 ^